add nasa project content

--- a/static/files/exit_presentation_sc_nasa.html
+++ b/static/files/exit_presentation_sc_nasa.html
@@ -185,13 +185,13 @@ class: title-slide middle
 ### Mentor: Millennia Young, PhD
 
 ???
-Good afternoon, everyone. Thank you for being here today, taking time out of your schedules to hear us present.
+Good afternoon, everyone. Thank you for being here today and taking time out of your schedules to hear us present.
 
 I'm Gabby Novak, I am an undergrad at the University of Rochester studying statistics and computer science. But for the summer, I am an intern in the Biostats lab.
 
-When I got sent home from school in March, I never expected that I would find myself working for NASA from my bedroom. In fact, I applied on a whim back in the fall under the then-unsubstantiated assumption that NASA must employ statisticians in some capacity but entirely unsure of their role and if they had any suitable projects for an undergrad intern. 
+When I got sent home from school in March, I never expected that I would find myself working for NASA from my bedroom. In fact, I applied on a whim back in the fall under the then-unsubstantiated assumption that NASA must employ statisticians in some capacity but entirely unsure of their role and if they had any suitable projects for an undergrad intern.
 
-As it turned out, such a project was available. My mentor, Millennia Young in the Biostats Lab has championed increasing reproducibility in SK Labs since her arrival. My task was to support these aims by developing guidance on best practices for reproducible research. Today I'm going to share with you some of the highlights of this material. The title of this presentation: "Can we run it again, just to be sure?"..."I'm sorry, we can't." personifies that central issue of irrepreducible research. 
+As it turned out, such a project was available. My mentor, Dr. Young in the Biostats Lab has championed increasing reproducibility in SK Labs since her arrival. My task was to support these aims by developing guidance on best practices for reproducible research. Today I'm going to share with you some of the highlights of this material. The title of this presentation: "Can we run it again, just to be sure?"..."I'm sorry, we can't." personifies that central issue of irrepreducible research.
 ---
 class: hide-logo
 
@@ -203,7 +203,7 @@ Results are reproducible when the computational data analysis processes used to 
 ![:footer]
 
 ???
-The word reproducibility gets thrown around a lot in scientific circles and can actually refer to a variety of concepts. Here, I am using it in its most common usage, computational reproducibility which is being able to re-run an analysis in its entirety on a different computer, without the expert knowledge of the person who initially preformed it. The goal is to be able re-trace the steps of the analysis so exactly from raw data to final results that not only are the general conclusions maintained, but the tables, plots, and values reported in-text are identical to any other time the analysis is run.
+The word reproducibility gets thrown around a lot in scientific circles and can actually refer to a variety of concepts depending on discipline and context. Here, I am using it in its most common usage --computational reproducibility-- which is being able to re-run an analysis in its entirety on a different computer, without the expert knowledge of the person who initially preformed it. The goal is to be able re-trace the steps of the analysis so exactly from raw data to final results that not only are the general conclusions maintained, but the tables, plots, and values reported in-text are identical to any other time the analysis is run.
 ---
 class: hide-logo
 # "Is that really necessary?"
@@ -219,12 +219,10 @@ class: hide-logo
 ![:footer]
 
 ???
-In recent years, irrepreducibility has become increasingly problematic for researchers when their published results cannot be verified. When results cannot be recreated, their reliability is immediately brought into question. Here are just a few examples of published work that has been recently retracted from scientific journals 
-
-due to improper analysis, inability to reproduce results, uncaught mistakes and errors. 
+In recent years, irrepreducibility has become increasingly problematic for researchers when their published results cannot be verified. When results cannot be recreated, their reliability is immediately brought into question. Here are just a few examples of published work that has been recently retracted from scientific journals due to improper analysis, inability to reproduce results, uncaught mistakes and errors.
 These are exactly the sorts of issues that reproducibility techniques can help prevent.
 
-But you may still be thinking that such errors would never have been overlooked by a scrupulous researcher like yourself. 
+But you may still be thinking that such errors would never have been overlooked by a scrupulous researcher like yourself.
 ---
 class: hide-logo
 # "But that wouldn't happen to me."
@@ -245,16 +243,16 @@ class: hide-logo
 ![:footer]
 
 ???
-Perhaps so, but how many of these thoughts have you had throughout your career? 
+Perhaps so, but how many of these thoughts have you had throughout your career?
 
-Why did I do that? 
-How did I do that? 
+Why did I do that?
+How did I do that?
 Why are these results different?
 I have to start all over again
 
-Someone --maybe a colleague, a reviewer, another researcher looking to extend your work-- asks a question about your analysis and you can't remember the answer. It has been some time, the details escape you, and there is minimal or no documentation. 
+Someone --maybe a colleague, a reviewer, another researcher looking to extend your work-- asks a question about your analysis and you can't remember the answer. It has been some time, the details escape you, and there is minimal or no documentation.
 
-You are forced to start all over again. But maybe you can't. You find that the raw data is unavailable or not matter how you try, you just can't recreate the original results.
+You are forced to start all over again. But maybe you can't. You find that the raw data is unavailable or no matter how you try, you just can't recreate the original results.
 
 The same situation may occur if you get sent updated data, or an error is identified.
 
@@ -269,7 +267,7 @@ class: hide-logo
 ![:footer]
 
 ???
-Still unconvinced? Consider that this is what reproducibility is all about: verifiable results. Applying reproducibility techniques throughout the research process can help detect errors that may have otherwise fallen through the cracks, leading to inappropriate conclusions and endangering the reputation, funding, and suitability for publication of a research project. 
+Still unconvinced? Consider that this is what reproducibility is all about: verifiable results. Applying reproducibility techniques throughout the research process can help detect errors that may have otherwise fallen through the cracks, leading to inappropriate conclusions and endangering the reputation, funding, and suitability for publication of a research project.
 ---
 class: hide-logo
 
@@ -282,7 +280,7 @@ class: hide-logo
 ![:footer]
 
 ???
-Redundant work is a waste of time and time is money. Time spent re-doing analysis or building computational tools that already exist is time not spent doing science. Reproducibility not only cuts down on re-doing previously completed tasks but encourages the availability and documentation of previously developed tools and data sets for effective and efficient reuse by the initial researcher and others.  
+Redundant work is a waste of time and time is money. Time spent re-doing analysis or building computational tools that already exist is time not spent doing science. Reproducibility not only cuts down on re-doing previously completed tasks but encourages the availability and documentation of previously developed tools and data sets for effective and efficient reuse by the initial researcher and others.
 ---
 class: hide-logo
 
@@ -297,7 +295,7 @@ class: hide-logo
 ![:footer]
 
 ???
-Quality documentation, a hallmark of reproducibility, prevents embarrassing and possibly detrimental knowledge loss and ensures that work can be understood in the absence of the original investigators. 
+Quality documentation, a hallmark of reproducibility, prevents embarrassing and possibly detrimental knowledge loss and ensures that work can be understood in the absence of the original investigators.
 ---
 class: hide-logo
 
@@ -354,7 +352,7 @@ class: hide-logo
 ![:footer]
 
 ???
-When it comes time to draft a manuscript, information is centralized and available: simplifying the writing and ensuring the ability to meet even the strictest journal standards. Reviewers have convincing evidence of quality of work and their increased ability to understand the work places them in a position to provide more constructive feedback than would otherwise be possible.
+If there is intent to publish, when it comes time to draft a manuscript, information is centralized and available: simplifying the writing and ensuring the ability to meet even the strictest journal standards. As I am sure you are aware, publication in an increasing number of prominant journals is contingent on evidence of reprodubility. Reviewers have convincing evidence of quality of work and their increased ability to understand the work places them in a position to provide more constructive feedback than would otherwise be possible.
 ---
 layout: true
 class: hide-logo
@@ -374,11 +372,11 @@ class: hide-logo
 ???
 So you've accepted the merits of reproducible research. What now? What steps can you take? Most importantly, avoid the hidden dangers that put your project at a high risk for irreproducibility.
 
-Any data manipulation, calculations, statistical methods, or figure creation that takes place within a graphic-based software like MS Excel is effectively undocumented. 
+A pervasive and significant problem is untracked data manipulation. Any data manipulation, calculations, statistical methods, or figure creation that takes place within a graphic-based software like MS Excel is effectively undocumented.
 
-There is no way to see what has been done or to go back and modify steps that have already been taking across many work sessions. Specifically, errors in spreadsheets involving formulas are common, difficult to detect, and may alter outcomes significantly. 
+There is no way to see what has been done or to go back and modify steps that have already been taking across many work sessions.
 
-Just to be clear, I am not denouncing using Excel or whatever program for _any_ purpose. Spreadsheets are very useful for data collection. But they are highly problematic for analysis. 
+Just to be clear, I am not denouncing using Excel or whatever program for _any_ purpose. Spreadsheets are very useful for data collection. But they are highly problematic for analysis.
 ---
 .right-column[
 
@@ -390,11 +388,11 @@ Just to be clear, I am not denouncing using Excel or whatever program for _any_ 
 ???
 Second culprit: copy a paste, a great opportunity for human error.
 
-When you copy and paste something you, quite fairly, assume that it is identical to the original. But what if you inadvertently select the wrong area? What if you accidentally duplicate data? Both could drastically affect conclusions. 
+When you copy and paste something you, quite fairly, assume that it is identical to the original. But what if you inadvertently select the wrong area? What if you accidentally duplicate data? Both could drastically affect conclusions.
 
-Maybe you intend to modify the copy so it differs from the original. But what if you fail to update it completely so it not longer appears or works as intended? 
+Maybe you intend to modify the copy so it differs from the original. But what if you fail to update it completely so it not longer appears or works as intended?
 
-Or if you are copying and pasting results or displays from one software to another, there is no assurance that they are the most up to date. This can lead to inconsistencies between reported results.  
+Or if you are copying and pasting results or displays from one software to another, there is no assurance that they are the most up to date. This can lead to inconsistencies between reported results. Strategies to reduce copy and pasting include the use of modular coding or literate programming frameworks.
 ---
 layout: false
 layout: true
@@ -416,9 +414,9 @@ class: hide-logo
 ???
 Next: organize your project
 
-Files scattered across multiple locations invites lost files and makes sharing the project nearly impossible. Centralize your files in a single directory and organize and name them in a way that makes their contents clear. No one should have to open a file or run a script to see what it contains. 
+Files scattered across multiple locations invite lost files and makes sharing the project nearly impossible. Centralize your files in a single directory and organize and name them in a way that makes their contents clear. No one should have to open a file or run a script to see what it contains.
 
-Be sure that the contents of your files can be successfully migrated between machines and operate the same way in each location.
+Be sure that the contents of your files can be successfully migrated between machines and operate the same way in each location. This means practices like using relative file references and portable data formats.
 ---
 .right-column[
 
@@ -460,7 +458,7 @@ Code is simply an executable record of steps taken to analyze data. It can be re
 ]
 
 ???
-Code without context can be rendered useless by circumstances. It is important to leave instructions for anyone looking to use project files on execution order, software and hardware requirements, and the intended purpose of code.
+Code without context can be rendered useless by circumstances. It is important to leave instructions for anyone looking to use project files on execution order, software and hardware requirements, the intended purpose of code, or why certain choices were made by the programmer.
 
 Everything that is left to guesswork is something that go wrong, at best forcing the possibly time consuming process of recreating the information or at worst causing errors or rendering the files unusable.
 ---
@@ -474,7 +472,7 @@ Everything that is left to guesswork is something that go wrong, at best forcing
 ]
 
 ???
-Software and hardware differences between machines like software versions or configurations, or even changes made to a single machine over time, can cause code to behave differently or throw new errors. At the very least the expected environment needs to be recorded. Tools exist for automating this documentation and preserving computational environments.
+Something many people may not think of immediately, but software and hardware differences between machines like software versions or configurations, or even changes made to a single machine over time, can cause code to behave differently or throw new errors. At the very least the expected environment needs to be recorded. Tools called package and environment managers automate this documentation and virtualization and containerization tools can preserve computational environments.
 ---
 layout: false
 class: hide-logo
@@ -516,13 +514,13 @@ class: hide-logo
 ![:footer]
 
 ???
-That is a brief overview of reproducible research but it has barely scratched the surface of the available techniques and tools that can assist researchers in reaping the benefits of reproducibility. 
+That is a brief overview of reproducible research but it has barely scratched the surface of the available techniques and tools that can assist researchers in reaping the benefits of reproducibility.
 
-The guidance I developed during my time as an intern is available in report-form from the Biostats Lab and contains much more detailed information than I could cover here today. 
+The guidance I developed during my time as an intern is available in report-form from the Biostats Lab and contains much more detailed information than I could cover here today.
 
-Before I take questions, I would like to take a moment to express my gratitude to my mentor, Millennia Young and her team in the Biostats lab for their assistance, support, and guidance throughout my internship. 
+Before I take questions, I would like to take a moment to express my gratitude to my mentor, Dr. Young and her team in the Biostats lab for their assistance, support, and guidance throughout my internship.
 
-I would Additionally, I would like to acknowledge two of my professors, Katherine Grzesik and Joe Ciminelli, who steered me in the direction of this internship and provide me with constant encouragement and advice as I progress through my academic career.  
+Additionally, I would like to acknowledge two of my professors, Dr. Grzesik and Dr. Ciminelli, who steered me in the direction of this internship and provide me with constant encouragement and advice as I progress through my academic career.
 ---
 class: question middle
 
